css/card.css
.card {
  background-color: var(--secondary-color);
  border-radius: 8px;
  padding: 15px;

  transition: transform 250ms ease-in-out;

  display: grid;
  grid-template-rows: 150px auto auto 1fr 20px;
  justify-items: center;
  align-items: center;
  gap: 15px;

  text-align: center;
}

.card:hover {
  transform: scale(1.04);
}

.card img {
  height: 100%;
  margin-bottom: 0px;
}

.card h2 {
  margin: 0;
}

.card p {
  margin: 0;

  font-size: 15px;
  text-align: center;
}

.card .buttons {
  margin: 0;
  gap: 20px;
  display: block;
  justify-items: start;
  justify-content: start;
  align-content: start;
}

.card .buttons a {
  text-decoration: none;
  color: inherit;
  font-weight: bold;
  font-size: 25px;
  transition: transform 250ms ease-in-out;
}

.card .buttons a:visited {
  color: var(--icon-visted-color);
}

.card .buttons a:hover {
  color: var(--icon-hover-color);
  transform: scale(1.1) translateY(-5px);
}

.card .buttons {
  margin: 0;
  gap: 20px;
  display: flex;
}

.card .badges {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 10px;
}

.card .badges img {
  margin: 0px;
  height: 20px;
}

